--- a/test/output/html/index.html
+++ b/test/output/html/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>fis3-parser-vue-component demo</title>
 
-    <link rel="stylesheet" type="text/css" href="/component/index_vue_style_0.css" />
-    <link rel="stylesheet" type="text/css" href="/component/a_vue_style_0.css" />
-    <link rel="stylesheet" type="text/css" href="/component/b_vue_style_0.css" />
-    <link rel="stylesheet" type="text/css" href="/component/c_vue_style_0.css" />
+    <link rel="stylesheet" type="text/css" href="/component/index-vue-style-0.css" />
+    <link rel="stylesheet" type="text/css" href="/component/a-vue-style-0.css" />
+    <link rel="stylesheet" type="text/css" href="/component/b-vue-style-0.css" />
+    <link rel="stylesheet" type="text/css" href="/component/c-vue-style-0.css" />
+    <link rel="stylesheet" type="text/css" href="/less/index.css" />
 </head>
 <body>
   <div class="app" id="app">
